Temp. fix for a spacing issue on the storefront
Close jackjonesfashion/tasks#60

--- a/src/static_files/styles/jj-storefront.styl
+++ b/src/static_files/styles/jj-storefront.styl
@@ -179,6 +179,18 @@ a
 		// Brands
 		.storefront-brands
 			width 100%
+			
+			// Temp fix for E-com fuckup
+			margin-top 43px
+			
+			@media only screen and (max-width : 1366px)
+				margin-top 37px
+				
+			@media only screen and (max-width : 1280px)
+				margin-top 34px
+				
+			@media only screen and (max-width : 1030px)
+				margin-top 23px
 
 			.grid
 				text-align center
